Bug 86845 - DIALOG: Hyperlink details not retained between tabs
Summary: DIALOG: Hyperlink details not retained between tabs
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.4.0.0.beta1
Hardware: Other All
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.2.0 target:5.1.0.1 target:5.0.5
Keywords: bibisected, bisected, regression
: 89687 90283 90424 92683 (view as bug list)
Depends on:
Blocks: Hyperlink
  Show dependency treegraph
 
Reported: 2014-11-29 12:47 UTC by Yousuf Philips (jay) (retired)
Modified: 2019-11-06 14:45 UTC (History)
13 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-11-29 12:47:32 UTC
1) Open writer
2) Write 'Hi'
3) Select 'Hi' and add hyperlink
4) In dialog press on a different tab (e.g. 'Mail & News')
5) Notice that 'Hi' is no longer in the 'Text' field
6) Return to 'Internet' tab and 'Text' field is still blank

Version: 4.5.0.0.alpha0+
Build ID: 8bc56801af0540c0496c1f8ddd335578a8791017
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2014-11-28_23:01:06
Comment 1 tommy27 2014-11-29 18:11:32 UTC
confirmed under Win8.1 using 4.5.0.0.alpha0+
Build ID: 84a6d8eeaab540e5b2ea3baffd919903dff8c247
TinderBox: Win-x86@39, Branch:master, Time: 2014-11-22_23:41:04

works fine in 4.3.3.2 
hence regression
Comment 2 Matthew Francis 2014-12-03 04:13:00 UTC
In bibisect-44alpha2only:
 8e1b1d6afad00c5947ecd9df14daec5ad4c39cbd is the first bad commit
commit 8e1b1d6afad00c5947ecd9df14daec5ad4c39cbd
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Sat Oct 18 04:53:05 2014 +0000

    source-hash-0c1904ec9fa574da49ccc988c6480e8d55916860
    
    commit 0c1904ec9fa574da49ccc988c6480e8d55916860
    Author:     Miklos Vajna <vmiklos@collabora.co.uk>
    AuthorDate: Tue Jun 24 22:11:55 2014 +0200
    Commit:     Miklos Vajna <vmiklos@collabora.co.uk>
    CommitDate: Tue Jun 24 22:18:45 2014 +0200
    
        Use comphelper::SequenceAsHashMap
    
        Change-Id: I7d644980172c479191ecfab2e6dfcb60c11afc3f

:100644 100644 9096598192eca3ab3561701526e385b39da98d3d f830b1ffd714233d58436b65b6edbe5cc56eabc7 M	ccache.log
:100644 100644 85095b3d459b4953ffd457354284ba4a35c2f663 015234709f84a1d4bf9e973fa9868b70d82a6257 M	commitmsg
:100644 100644 51af948035a434c3ca09b540cb0b14b6f7be9b6c 4d968ed2a082cf0bd0bff2e8bac05fc7ad786068 M	make.log
:040000 040000 d2a56a9fd9121a428049e97c0e3b1e2fe743d8a6 575dee88af2e49e87bc819965636fa380fcc3167 M	opt
Comment 3 Matthew Francis 2014-12-03 15:08:47 UTC
Follow-on plain bisect over the bibisect range points to the following:

commit 1579fc7930971e76ed36428d83652401aaa15879
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Tue Jun 24 09:48:14 2014 +0100

    hide old page on showing new page
    
    and showing/hiding pages during Paint seems crazy to me, doing it
    during ShowPage makes sense.
    
    Change-Id: Ifd0c3c50812157cfa793da86715d58818e944e6b
Comment 4 Matthew Francis 2015-03-28 08:54:44 UTC
*** Bug 89687 has been marked as a duplicate of this bug. ***
Comment 5 Matthew Francis 2015-04-13 05:25:43 UTC
*** Bug 90424 has been marked as a duplicate of this bug. ***
Comment 6 Matthew Francis 2015-04-13 05:26:10 UTC
*** Bug 90283 has been marked as a duplicate of this bug. ***
Comment 7 Gordo 2015-07-11 14:23:14 UTC
*** Bug 92683 has been marked as a duplicate of this bug. ***
Comment 8 Jean-Baptiste Faure 2015-07-21 15:05:45 UTC
Rise importance a bit because this bug may generate dataloss: if you do not see that the field has been emptied and you click on Ok button, the text you had selected is lost.

Best regards. JBF
Comment 9 Timur 2015-11-13 15:05:49 UTC
Probably the same cause as Bug 91832. Please see attachment 120522 [details].
Comment 10 Konstantin 2015-11-19 09:03:01 UTC
Confirmed under LO 4.4.6.3 for Linux. Reproduced not only in Writer and Calc, but in Draw and Impress too.
Comment 11 Timur 2015-11-19 10:00:48 UTC
Please don't change version. It says "earliest affected", which is useful info.
Comment 12 Timur 2015-12-07 09:11:16 UTC
Bug 91832 seems to work now, solved somewhere in build between 1-3.12.
This bug is still not solved. 
When we make relative local links and press Document tab, we loose text data, because the dialog starts in Internet tab from 4.4.0.
Comment 13 Timur 2015-12-07 15:15:12 UTC
Caolan, if it's http://cgit.freedesktop.org/libreoffice/core/commit/?id=1579fc7930971e76ed36428d83652401aaa15879 can it be simply reverted or it depends on sth. else? Thank you for your comment.
Comment 14 Commit Notification 2015-12-09 17:17:16 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=eb38493c4101d8777052267ee83a5d4f883dd9ac

Resolves: tdf#86845 hyperlink details not retained between tabs

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Caolán McNamara 2015-12-09 17:18:14 UTC
does that work as expected now ?
Comment 16 Commit Notification 2015-12-09 17:20:16 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e34e0c8d97b90786e9ca9cf88d9fc3e127ce8350&h=libreoffice-5-1

Resolves: tdf#86845 hyperlink details not retained between tabs

It will be available in 5.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Jean-Baptiste Faure 2015-12-09 21:36:29 UTC
(In reply to Caolán McNamara from comment #15)
> does that work as expected now ?

Yes, it does. Tested on LibreOffice 5.1.0.0.beta2+ Build ID: e34e0c8d97b90786e9ca9cf88d9fc3e127ce8350
built at home under Ubuntu 15.10 x86-64.

Thank you very much for this fix. :-)

Best regards. JBF
Comment 18 Yousuf Philips (jay) (retired) 2015-12-10 12:27:15 UTC
@Caolan: Would be good to push this also into 5.0.
Comment 19 Commit Notification 2015-12-10 14:30:29 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b82567327fa64ceb7d486774df3ac9c95763009c&h=libreoffice-5-0

Resolves: tdf#86845 hyperlink details not retained between tabs

It will be available in 5.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Robinson Tryon (qubit) 2015-12-17 08:41:08 UTC Comment hidden (obsolete)