Resolves: tdf#86845 hyperlink details not retained between tabs

Change-Id: Ib6c1df4a97598c156b10b1730debb078e362e0d2
(cherry picked from commit eb38493c4101d8777052267ee83a5d4f883dd9ac)
(cherry picked from commit e34e0c8d97b90786e9ca9cf88d9fc3e127ce8350)